<resources>

    <string name="app_name">RQ</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">RQ</string>
    <string name="title_prefs_general"></string>
    <string name="feed_title">Feed</string>
    <string name="feed_add">Add feed</string>
    <string name="feed_remove">Remove feed</string>
    <string name="feed_list">List feed</string>
    <string name="repo_title">Repository</string>
    <string name="repo_size">Cache Size</string>
    <string name="repo_empty">Empty Cache</string>
    <string name="refresh_title">Refresh Policy</string>
    <string name="refresh_wifi">Wifi only</string>
    <string name="refresh_norule">Whatever</string>
    <string name="rate_title">Refresh Rate</string>
    <string name="rate_manual">Manually</string>
    <string name="rate_some">Every something</string>
	<string name="about_title">About</string>
	<string name="about_version">Version</string>
		   
    
</resources>